[package]
name = "bayes-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
yew-router = "0.16"
web-sys = { version = "0.3.57", features = ["Blob", "BlobPropertyBag", "HtmlAnchorElement", "Url"] }

log = "0.4.6"
wasm-logger = "0.2.0"
re = "0.1.0"
regex = "1.6.0"
stylist = {version="0.10", features = ["yew_integration"]}
is_close = "0.1.3"
gloo-storage = "0.2"
gloo-timers = "0.2.1"
serde = "1.0.158"
serde_json = "1.0.94"
js-sys = "0.3"
wasm-bindgen = "0.2"
format_num = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

