[package]
name = "bayes-calc"
version = "0.2.3"
edition = "2021"

[dependencies]
yew = "0.19"
yew-router = "0.16"
web-sys = { version = "0.3.57", features = ["Blob", "BlobPropertyBag", "DomTokenList", "CssStyleDeclaration", "HtmlAnchorElement", "Url", "Document", "HtmlCollection", "DomRect", "Element"] }
base64 = "0.13.0"
log = "0.4.6"
wasm-logger = "0.2.0"
re = "0.1.0"
regex = "1.6.0"
is_close = "0.1.3"
gloo-storage = "0.2"
gloo-timers = "0.2.1"
serde = "1.0.158"
serde_json = "1.0.94"
js-sys = "0.3"
wasm-bindgen = "0.2.83"
format_num = "0.1.0"
gloo = "0.8.0"
comrak = "0.18.0"
wasm-bindgen-futures = "0.4.36"

[dev-dependencies]
wasm-bindgen-test = "0.3"

